--- a/homepage/eventPromoTemplate.hbs
+++ b/homepage/eventPromoTemplate.hbs
@@ -21,7 +21,7 @@
                     </a>
                 </div>
 
-                <div id="metadata" class="metadata">heelo this is meta data</div>
+                <div id="metadata" class="metadata">{{ data }}</div>
 
                 <div class="content">{{{ content }}}</div>
             </div>
