--- a/bookings/src/components/css/Compete.css
+++ b/bookings/src/components/css/Compete.css
@@ -1,3 +1,9 @@
+.Compete {
+    animation: reveal 750ms ease;
+} @keyframes reveal {
+    from { opacity: 0 }
+    to { opacity: 1 }
+}
 .Compete .Team {
     display: flex;
     flex-flow: column;
