--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -8,7 +8,7 @@
     <div class="banner-container">
         <div class="event">
             <div class="banner">
-                <a href="#hackrp">
+                <a href="#hackhl">
                     <img src="/static/img/thumb.png">
                 </a>
             </div>
@@ -19,7 +19,7 @@
 
         <div class="event">
             <div class="banner">
-                <a href="#hackfn">
+                <a href="#nerdwd">
                     <img class="mobile" src="/static/img/JMI Logo.png">
                     <img class="desktop" src="/static/img/thumb.png">
                 </a>
@@ -32,11 +32,11 @@
     
     <div class="banner-container">
         <div class="banner small"><img src="/static/img/thumb.png"></div>
-        <div class="banner small"><a href="#hackrp"><img src="/static/img/thumb.png"></a></div>
+        <div class="banner small"><a href="#dastan"><img src="/static/img/thumb.png"></a></div>
         <div class="banner small"><img src="/static/img/thumb.png"></div>
     </div>
     <div class="banner-container">
-        <div class="banner small"><a href="#hackrp"><img src="/static/img/thumb.png"></a></div>
+        <div class="banner small"><a href="#hackhl"><img src="/static/img/thumb.png"></a></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
         <div class="banner small"></div>
