--- a/bookings/src/components/css/Compete.css
+++ b/bookings/src/components/css/Compete.css
@@ -25,9 +25,7 @@
 }
 
 .Compete #reg {
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 5em;
+    margin: 5em auto;
 }
 
 .MemberData {
