--- a/homepage/static/css/Header.css
+++ b/homepage/static/css/Header.css
@@ -203,6 +203,7 @@ header ul li a {
     } header ul li a {
         text-decoration: none;
         color: #000;
+        font-weight: 400;
     }
 }
 
