--- a/bookings/src/components/css/Payments.css
+++ b/bookings/src/components/css/Payments.css
@@ -20,3 +20,26 @@
 } .Payments .form .action * {
     margin: auto;
 }
+
+/* Pricing Display */
+.pricing {
+    padding: 1em;
+    max-width: 20em;
+    display: flex;
+    flex-flow: column;
+    text-align: left;
+} .pricing p {
+    margin: 0.25em 0;
+    max-width: 100%;
+} .pricing * {
+    margin: 0.5em 0;
+}
+
+.pricing #trP {
+    font-size: 1em;
+} .pricing #tax {
+    font-size: 0.75em;
+    color: #555;
+} .pricing h3 {
+    font-weight: 600;
+}
