--- a/homepage/partials/header.hbs
+++ b/homepage/partials/header.hbs
@@ -6,7 +6,7 @@
             <div class="logo-rotor">
                 <div class="rotary"></div>
             </div>
-            <p class="logo-text">xtacy</p>
+            <p class="logo-text"><a href="/" class="logo-text">xtacy</a></p>
         </div>
 
         <input type="checkbox" id="sidebar-toggle" hidden="true">
