--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -92,9 +92,9 @@
                 document.getElementById("button_main").onclick = () => {
                     sessionStorage.setItem( config.hashToken, checksum );
                     if(data.type==='gen')
-                        window.location = '/secure/reg?int=gen';
+                        window.location = '/register/main?int=gen';
                     else
-                        window.location = '/secure/reg?int=' + data.type + '&evt=' + eventId;
+                        window.location = '/register/main?int=' + data.type + '&evt=' + eventId;
                 }
                 document.getElementById("button_aux").onclick = () => {
                     window.location = '/event/' + eventId;
