--- a/bookings/src/components/css/Tickets.css
+++ b/bookings/src/components/css/Tickets.css
@@ -112,6 +112,7 @@
     color: #555;
 } .Seats .controls .pricing h3 {
     font-weight: 600;
+    font-size: 1.5em;
 }
 
 @media (min-width: 600px) {
