--- a/bookings/src/components/css/Footer.css
+++ b/bookings/src/components/css/Footer.css
@@ -1,51 +1,90 @@
 footer {
     position: relative;
     background-color: #000;
+    color: #fff;
     padding: 2em;
 }
-
-footer .dev {
-    font-size: 0.6em;
-    font-weight: 200;
-    color: #fff;
-    margin: 2em auto 1em auto;
-    bottom: 0;
+footer .container {
+    max-width: 800px;
 }
 
-footer .container {
-    display: block;
+footer .base {
+    font-size: 0.75em;
+    font-weight: 200;
+    text-align: left;
+}
+footer .base-title {
+    font-size: 1.5em;
+}
+footer .collab {
+    display: flex;
+    flex-flow: column;
+} footer .collab-imgs {
+    width: 100%;
+    height: 2em;
+    margin: 1.5em 0;
+} footer .collab-imgs img {
+    height: 100%;
+    float: left;
+} 
+@media (min-width: 600px) {
+    footer .collab {
+        flex-flow: row;
+    } footer .collab-imgs {
+        width: 50%;
+        height: 3em;
+        margin: 0 1.5em;
+    } footer .collab-imgs img {
+        float: right;
+    }
+}
+footer .dev {
+    font-size: 0.75em;
+    font-weight: 200;
+    margin: 2em 0;
+    bottom: 0;
 }
 
 footer ul {
     margin: 0;
-    margin-right: 2em;
+    margin-right: 1.5em;
     padding: 0;
     list-style: none;
     text-align: left;
-} footer ul li {
+}
+
+footer ul li {
     margin: 0;
-    margin-bottom: 0.25em;
+    margin-bottom: 0.5em;
     width: fit-content;
 } footer ul li:first-of-type::before {
+    font-size: 1.25em;
+    font-weight: 600;
     display: block;
     margin-bottom: 1em;
-    font-size: 0.75em;
-    font-weight: 600;
-    color: #bbb;
+    color: #ffd800;
 } footer ul li a {
-    font-size: 0.75em;
+    font-size: 0.9em;
+    font-weight: 400;
     text-decoration: none;
     color: #fff;
 }
 
-footer .links li:first-of-type::before {
+footer .nav-links li:first-of-type::before {
     content: 'LINKS';
 }
-footer .faqs li:first-of-type::before {
-    content: 'FAQs';
+footer .xtacy li:first-of-type::before {
+    content: 'XTACY';
+}
+footer .social li:first-of-type::before {
+    content: 'FOLLOW';
+} footer .nav-links ul {
+    margin-right: 0;
 }
 
 footer .footer-links {
     display: flex;
     flex-direction: row;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
