--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -28,7 +28,7 @@
         
         <h1 class="Title">xtacy</h1>  
         <div class="Info">
-            <p>The annual techno-cultural roller coaster festival organized by 
+            <p>The annual techno-cultural extravaganza organized by 
                 Faculty of Engineering and Technology, Jamia Millia Islamia</p>
         </div>
     </div>    
