--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -1,34 +1,42 @@
 <link rel="stylesheet" type="text/css" media="screen" href="/static/css/Footer.css">
 
 <footer>
-    <div class="footer-wrapper container">
-        <div class="footer-links container">
-            <div class="xtacy">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/events">Events</a></li>
-                    <li><a href="/sponsors">Sponsors</a></li>
-                </ul>
-            </div>
-
-            <div class="social">
-                <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Twitter</a></li>
-                </ul>
-            </div>
-
-            <div class="nav-links">
-                <ul>
-                    <li><a href="/terms">Terms</a></li>
-                    <li><a href="/contact">Contact Us</a></li>
-                    <li><a href="/register">Register</a></li>
-                </ul>
-            </div>
+    <div class="footer-links container">
+        <div class="xtacy">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/events">Events</a></li>
+                <li><a href="/sponsors">Sponsors</a></li>
+            </ul>
         </div>
 
-        <p class="left" style="margin: 0 1em; color: #fff">&copy; 2019 XTACY Jamia Millia Islamia</p>
-        <p class="dev">Developed with 💛 by NAMAK</p>
+        <div class="social">
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+
+        <div class="nav-links">
+            <ul>
+                <li><a href="/terms">Terms</a></li>
+                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="/register">Register</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="base container">
+        <div class="collab">
+            <div>
+                <span class="base-title">xtacy</span><br/>
+                The annual techno-cultural extravaganza organized by Faculty of Engineering, Jamia Millia Islamia
+            </div>
+            <div class="collab-imgs">
+                <img src="http://xtacy.org:3000/static/img/collaborators.png" alt=""/>
+            </div>
+        </div>
+        <p class="dev">Developed with <span role="img" aria-label="love">💛</span> by NAMAK</p>
     </div>
 </footer>
