--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -95,14 +95,14 @@
 <section>
     {{!-- Slideshow of Title and Co-Sponsors --}}
     <div class="sponsors">
-        {{!-- <marquee behavior="" direction=""> --}}
+        <marquee behavior="scrolling" direction="left">
             <img src="/static/img/JMI Logo.png">
             <img src="/static/img/JMI Logo.png">
             <img src="/static/img/JMI Logo.png">
             <img src="/static/img/JMI Logo.png">
             <img src="/static/img/JMI Logo.png">
             <img src="/static/img/JMI Logo.png">
-        {{!-- </marquee> --}}
+        </marquee>
     </div>
 </section>
 
