--- a/homepage/partials/header.hbs
+++ b/homepage/partials/header.hbs
@@ -12,6 +12,7 @@
         <input type="checkbox" id="sidebar-toggle" hidden="true">
         <label for="sidebar-toggle" class="hamburger"><span></span></label>
 
+        {{!-- Mobile Navigation Sidebar --}}
         <div class="sidebar">
             <nav class="sidebar-nav">
                 <ul>
@@ -19,21 +20,21 @@
                     <li><a href="/about">about</a></li>
                     <li><a href="/events">events</a></li>
                     <li><a href="/contact">contact</a></li>
-                    <li><a href="/register">register</a></li>
+                    <li><a href="/signup">register</a></li>
                 </ul>
             </nav>
             <div class="accent"></div>
         </div>
         <div class="sidebar-shadow" id="sidebar-shadow"></div>
         
-
+        {{!-- Desktop Navigation Menu --}}
         <nav class="desktop-nav">
             <ul>
                 <li><a href="/">home</a></li>
                 <li><a href="/about">about</a></li>
                 <li><a href="/events">events</a></li>
                 <li><a href="/contact">contact</a></li>
-                <li class="highlight"><a href="/register" class="highlight">register</a></li>
+                <li class="highlight"><a href="/signup" class="highlight">register</a></li>
             </ul>
         </nav>
     </div>
