--- a/homepage/static/css/Homepage.css
+++ b/homepage/static/css/Homepage.css
@@ -297,18 +297,21 @@ img[class~="mobile"] {
 .slide {
     position: relative;
     width: 100%;
-    height: 36em;
+    height: 24em;
     background-color: #000;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
-    transition: all 0.25s ease;
 } .slide img {
-    max-height: 100%;
+    height: 100%;
     object-fit: cover;
     transition: all 0.25s ease;
+    animation: fade 0.5s ease forwards;
+} @keyframes fade {
+    from { opacity: 0 }
+    to { opacity: 1 }
 } .slide:active img {
     opacity: 0.85;
 } @media (min-width: 600px) {
