--- a/homepage/static/css/Footer.css
+++ b/homepage/static/css/Footer.css
@@ -62,7 +62,7 @@ footer ul li {
     font-weight: 600;
     display: block;
     margin-bottom: 1em;
-    color: #ffd800;
+    color: #aaa;
 } footer ul li a {
     font-size: 0.9em;
     font-weight: 400;
