--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -34,7 +34,7 @@
                 The annual techno-cultural extravaganza organized by Faculty of Engineering, Jamia Millia Islamia
             </div>
             <div class="collab-imgs">
-                <img src="http://xtacy.org:3000/static/img/collaborators.png" alt=""/>
+                <img src="https://xtacy.org/static/img/collaborators.png" alt=""/>
             </div>
         </div>
         <p class="dev">Developed with <span role="img" aria-label="love">💛</span> by NAMAK</p>
